Fixing skills section infinite scroll for mobile view. Fixing overflow for Project section.

--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,7 @@ body {
         transform: translateX(0);
     }
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
